fix up spacing

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -253,14 +253,17 @@ aside
     overflow hidden
   p#map iframe, img.map
     border dotted 2px hsla(0, 0%, 0%, 0.2)
-  img.map
-    float left
-    margin 0 10px 1em 0
-  h4
-    clear left
-    margin-bottom 0.25em
-  h3, h5
-    margin 0.25em 0
+  ul.locations
+    li
+      clear left
+      margin-bottom 1em
+    img.map
+      float left
+      margin 0 10px 1em 0
+    h3, h4, h5, p
+      margin 0.25em 0
+    h3, h5, p
+      margin-left 240px
 
 #page.index-how-to-win
   .slide
